# blr-hotspots

./: .env.example  .gitignore  DEPLOY.md  Makefile  NEON_SETUP.md  README.md  pyproject.toml  render.yaml
.github/workflows/: ingest.yml
api/: main.py
collectors/: __init__.py  base.py  blr_today.py  shopify_json.py
config/: sources.yaml
db/: __init__.py  connection.py  schema.sql  schema_pg.sql  store.py
pipeline/: __init__.py  dedupe.py  enrich.py  ingest.py  models.py  normalize.py  normalize_shopify.py
scripts/: ingest.sh  render_start.sh
tests/: test_hotspots.py  test_pipeline.py  test_shopify_normalize.py
web/: package-lock.json
web/src/app/: globals.css  layout.tsx
web/src/components/: EventCard.tsx  EventMap.tsx  HomePage.tsx  SearchBox.tsx
web/src/lib/: api.ts  areas.ts  categories.ts  eventGeoJson.ts  hotspotGeoJson.ts  time.ts  types.ts
