[project]
name = "blr-hotspots"
version = "0.1.0"
description = "Bangalore events aggregator — map hotspots from public feeds"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[project.scripts]
blr-ingest = "pipeline.ingest:main"
blr-serve = "api.main:serve"

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "collectors*", "db*", "pipeline*"]

[tool.ruff]
line-length = 100
target-version = "py311"
